v2.0/getting-started/rkt/installation/manual.md
---
title:  Manual installation of Calico with rkt
---

This tutorial describes how to manually configure a working environment for
a cluster of Calico-rkt enabled nodes.

To run through the tutorials, you will require at least two nodes, which we have
named `calico-01` and `calico-02`.  These names are not required to run the tutorials
but you may need to adapt the tutorial instructions based on your actual node names.

* TOC
{:toc}

## System requirements

- A cluster of bare metal servers or VMs (nodes) with a modern 64-bit Linux OS and IP connectivity
  between them.
- A recent version of [`rkt`][https://github.com/coreos/rkt/releases/latest] installed on each node in the cluster.  We recommend
  version > 1.20.0 as this is contains important fixes that prevent leaking IP addresses
  when containers are deleted.
- An [`etcd`][https://coreos.com/etcd/docs/latest/] cluster accessible by all nodes in the cluster

## About the Calico Components

There are three components of a Calico / rkt integration.

- The Calico per-node rkt container, [calico/node](https://quay.io/repository/calico/node?tab=tags)
- The [`calicoctl`](https://github.com/projectcalico/calico-containers) binary used to manage network
  policy.
- The [calico-cni](https://github.com/projectcalico/calico-cni) network plugin binaries.
  - This is the combination of two binary executables and a configuration file.

The `calico/node` rkt container must be run on node in your cluster.  It contains 
the BGP agent necessary for Calico routing to occur, and the Felix agent which programs 
network policy rules.

The `calicoctl` binary is a command line utility that can be used to manage network
policy for your rkt containers, and can be used to monitor the status of your
Calico services.

The `calico-cni` plugin binaries integrate directly with the rkt container lifecycle 
hooks on each node to configure the container interfaces, manage IP addresses and 
configure the containers to use Calico policy.

## Installing `calico/node` 

### Prepare host directory structure

The `calicoctl` binary uses certain known directories for service diagnostics and
status discovery.  In addition, this tutorial assumes binaries and CNI network
configuration will be placed in a particular location.

Ensure the following directories are created by running the following commands on
each node:

```
mkdir -p /var/run/calico
mkdir -p /var/log/calico
mkdir -p /opt/bin
mkdir -p /etc/rkt/net.d
```

### Run `calico/node` and configure the node.

Each Calico-rkt enabled node requires the `calico/node` container to be running.

The calico/node container can be run directly through rkt and needs to be run as
as fly stage-1 container.

```shell
sudo rkt run --stage1-path=/usr/share/rkt/stage1-fly.aci \
  --set-env ETCD_ENDPOINTS=http://<ETCD_IP>:<ETCD_PORT> \
  --set-env IP=autodetect \
  --insecure-options image \
  --volume birdctl,kind=host,source=/var/run/calico,readOnly=false \
  --mount volume=birdctl,target=/var/run/calico \
  --volume mods,kind=host,source=/lib/modules,readOnly=false  \
  --mount volume=mods,target=/lib/modules \
  --volume logs,kind=host,source=/var/log/calico,readOnly=false \
  --mount volume=logs,target=/var/log/calico \
  --net host \
  quay.io/calico/node:v1.0.0-rc2 &
```

> Replace `<ETCD_IP>:<ETCD_PORT>` with your etcd configuration.  The `ETCD_ENDPOINTS`
> environment may contain a comma separated list of endpoints of your etcd cluster.
> If the environment is omitted, Calico defaults to a single etcd 
> endpoint at http://127.0.0.1:2379.

You can check that it's running using `sudo rkt list`.

```shell
$ sudo rkt list
UUID      APP	IMAGE NAME                      STATE   CREATED         STARTED         NETWORKS
b52bba11  node  quay.io/calico/node:v1.0.0-rc2  running 10 seconds ago  10 seconds ago
```

## Intalling the calicoctl CLI tool

Download the calicoctl binary and ensure it is writeable.  We download to the 
/opt/bin directory to ensure it is accessible in your path (you may download 
wherever convenient though):

```
# Download and install `calicoctl`
wget -N -O /opt/bin/calicoctl https://github.com/projectcalico/calico-containers/releases/download/v1.0.0-rc2/calicoctl
chmod +x /opt/bin/calicoctl
```

See the [`calicoctl` documentation]({{site.baseurl}}/{{page.version}}/reference/calicoctl/)
for more information on this CLI tool.

## Installing the Calico CNI plugins
 
You can configure multiple networks when using rkt. Each network is represented by a configuration file in
`/etc/rkt/net.d/`.   To use Calico networking and policy, create a network that uses the Calico
CNI binaries for handling networking, policy and IP address management.

### Install the Calico plugins

Download the binaries and make sure they're executable.  We download to the 
`/etc/rkt/net.d` directory since it is one of the default locations that rkt uses
for config discovery.  You may change the location and override the rkt configuration
if desired.

```bash
wget -N -P /etc/rkt/net.d https://github.com/projectcalico/calico-cni/releases/download/v1.5.3/calico
wget -N -P /etc/rkt/net.d https://github.com/projectcalico/calico-cni/releases/download/v1.5.3/calico-ipam
chmod +x /etc/rkt/net.d/calico /etc/rkt/net.d/calico-ipam
```

The Calico CNI plugins require a standard CNI config file.

### Create a Calico network

By default, when using Calico CNI, connections to a given container are only allowed 
from containers on the same network. This can be changed by applying additional Calico policy - which will 
be discussed in advanced tutorials.

To define a rkt network for Calico, create a configuration file in `/etc/rkt/net.d/`.

- Each network should be given a unique "name".
- To use Calico networking, specify "type": "calico"
- To use Calico IPAM, specify "type": "calico-ipam" in the "ipam" section.

Calico will create an identically named profile for each Calico-rkt network, by
default the policy specific in the profile allows full communication between containers within the same 
network (i.e. using the same profile) but prohibits ingress traffic from containers
on other networks.

The same network configuration needs to be added to each node for the network
to be discoverable on that node.

For example, run the following to create a network called "mynet"

```shell
cat >/etc/rkt/net.d/10-calico-mynet.conf <<EOF
{
    "name": "mynet",
    "etcd_endpoints": "http://<ETCD_IP>:<ETCD_PORT>",
    "type": "calico",
    "ipam": {
        "type": "calico-ipam"
    }
}
EOF
```

> Replace `<ETCD_IP>:<ETCD_PORT>` with your etcd configuration.  The `etcd_endpoints`
> paramater may contain a comma separated list of endpoints of your etcd cluster.
> If the parameter is omitted from the config file, Calico defaults to a single etcd 
> endpoint at http://127.0.0.1:2379.
